# kivy_guess_number_app

./: Dockerfile  build_android_apk.sh  build_apk.sh  buildozer.spec  buildozer.spec123  game.kv  main.py  pyproject.toml
.github/workflows/: android_build.yml
recipes/libffi/: __init__.py
