[tool.poetry]
name = "kivy_guess_number_app"
version = "0.1.0"
description = "A Kivy-based Grocery App with PDF billing and Android APK support"
authors = ["Naibhivenkat <venkat.naibhi@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.*"

# ✅ Required for Buildozer & Android builds
buildozer = "1.5.0"
cython = "^3.0.10"

# ✅ App-specific dependency for PDF generation
fpdf = "^1.7.2"

# ✅ Optional for styling (not required to build)
yapf = "^0.43.0"

[style]
based_on_style = "pep8"
spaces_before_comment = 4
split_before_logical_operator = true

[tool.yapfignore]
ignore_patterns = [
  ".venv/"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
