[tool.poetry]
name = "kivy_guess_number_app"
version = "0.1.0"
description = "A Kivy-based Grocery App with PDF billing and Android APK support"
authors = ["Naibhivenkat <venkat.naibhi@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
kivy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"